[package]
name = "wrapt"
version = "0.4.0"
edition = "2024"
description = "A faster, prettier front-end for apt"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
futures = "0.3"
hex = "0.4"
indicatif = "0.17"
libc = "0.2"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
toml = "0.8"
